fix overflow

--- a/public/scss/structure/pages/_admin-forms.scss
+++ b/public/scss/structure/pages/_admin-forms.scss
@@ -1,5 +1,6 @@
 #login,
 #forgot-password {
+	overflow: hidden;
 	.bg-elements {
 	    background-color: $black_3;
 
