--- a/public/scss/structure/pages/_signup.scss
+++ b/public/scss/structure/pages/_signup.scss
@@ -1,4 +1,5 @@
 #signup {
+	overflow: hidden;
 	.bg-elements {
 	    background-color: $black_3;
 
