--- a/public/scss/structure/pages/_welcome.scss
+++ b/public/scss/structure/pages/_welcome.scss
@@ -1,4 +1,5 @@
 #welcome {
+	overflow: hidden;
 	h1 { font-family: $font_heebo, $font_sans_serif; }
 
 	.bg-elements {
